<resources>
    <string name="app_name">NeverApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_productos">Productos</string>
    <string name="menu_supermercados">Supermercados</string>
    <string name="menu_avisos">Avisos</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_salir">Cerrar Sesión</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_acercade">Acerca de...</string>
    <string name="menu_camara">Cámara</string>
    <string name="action_settings">Ajustes</string>
    <string name="label_nombre">Nombre:</string>
    <string name="label_contraseña">Contraseña:</string>
    <string name="label_contraseñanueva">Nueva Contraseña:</string>
    <string name="label_cambiarcontraseñaporemail">Cambiar contraseña vía email</string>
    <string name="button_volver">Volver</string>
    <string name="button_confirmar">Confirmar</string>
    <string name="label_descripcionabout">NeverApp es una aplicación creada para controlar tu nevera inteligente de manera remota y efectiva.</string>
    <string name="label_creadores">Creadores del proyecto:</string>
    <string name="label_redessociales">Redes sociales de la app:</string>
    <string name="channel_name">neverapp</string>
    <string name="channel_description">grupo5</string>
    <string name="facebook_application_id"
        translatable="false">1012764269102994</string>
    <string name="facebook_login_protocol_scheme"
        translatable="false">fb1012764269102994</string>

</resources>
