<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vicent.neverapp.ui.productos.ProductosFragment"
        android:label="@string/menu_productos"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.vicent.neverapp.ui.supermercados.SupermercadosFragment"
        android:label="@string/menu_supermercados"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.vicent.neverapp.ui.avisos.AvisosFragment"
        android:label="@string/menu_avisos"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.vicent.neverapp.ui.camara.CamaraFragment"
        android:label="@string/menu_camara"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.vicent.neverapp.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.vicent.neverapp.ui.perfil.PerfilFragment"
        android:label="@string/menu_salir"
        tools:layout="@layout/fragment_send" />
</navigation>